--- a/main.css
+++ b/main.css
@@ -63,7 +63,9 @@ Licensed under MIT [https://github.com/twbs/bootstrap/blob/main/LICENSE]
   justify-content: space-between;
   padding: var(--bs-navbar-padding-y) var(--bs-navbar-padding-x);
 }
-
+#about {
+  scroll-margin-top: 6rem;
+}
 .navbar-brand {
   padding-top: var(--bs-navbar-brand-padding-y);
   padding-bottom: var(--bs-navbar-brand-padding-y);
