--- a/main.css
+++ b/main.css
@@ -254,3 +254,12 @@ th {
 tr:nth-child(even) {
   background-color: #f9f9f9;
 }
+
+/* Make in-page anchors (#about, #dates, …) appear below the fixed navbar */
+:target::before {
+  content: "";
+  display: block;
+  height: 7rem;      /* ≈ height of your navbar */
+  margin-top: -7rem; /* negative of that height */
+}
+
