--- a/main.css
+++ b/main.css
@@ -81,7 +81,7 @@ Licensed under MIT [https://github.com/twbs/bootstrap/blob/main/LICENSE]
 }
 
 body {
-  margin: 0;
+  margin: 50px;
   font-family: "Libre Baskerville", serif;
   font-size: var(--bs-body-font-size);
   font-weight: 400;
